@@ -64,7 +64,8 @@ TRANSLATIONS = translations/smtube_es.ts \
                translations/smtube_pl.ts \
                translations/smtube_gl.ts \
                translations/smtube_el.ts \
-               translations/smtube_he_IL.ts
+               translations/smtube_he_IL.ts \
+               translations/smtube_pt_BR.ts
 
 # qtsingleapplication
 SOURCES += qtsingleapplication.cpp qtlocalpeer.cpp
