@@ -1,0 +1,562 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!DOCTYPE TS>
+<TS version="2.0" language="pt_BR">
+<context>
+    <name>About</name>
+    <message>
+        <location filename="../about.ui" line="14"/>
+        <source>About...</source>
+        <translation>Sobre...</translation>
+    </message>
+    <message>
+        <location filename="../about.ui" line="33"/>
+        <source>&amp;Info</source>
+        <translation>&amp;Informações</translation>
+    </message>
+    <message>
+        <location filename="../about.ui" line="53"/>
+        <location filename="../about.ui" line="109"/>
+        <location filename="../about.ui" line="165"/>
+        <source>icon</source>
+        <translation>ícone</translation>
+    </message>
+    <message>
+        <location filename="../about.ui" line="89"/>
+        <source>&amp;Translators</source>
+        <translation>&amp;Tradutores</translation>
+    </message>
+    <message>
+        <location filename="../about.ui" line="145"/>
+        <source>&amp;License</source>
+        <translation>&amp;Licença</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="33"/>
+        <source>YouTube%1 Browser for SMPlayer</source>
+        <translation>YouTube%1 Browser para o SMPlayer</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="35"/>
+        <source>Based on UMPlayer</source>
+        <translation>Baseado no UMPlayer</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="37"/>
+        <source>Version: %1</source>
+        <translation>Versão %1</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="39"/>
+        <source>Portable Edition</source>
+        <translation>Edição portátil</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="42"/>
+        <source>Compiled with Qt %1 (using %2)</source>
+        <translation>Compilado com Qt %1 (usando %2)</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="44"/>
+        <source>Visit our web for updates:</source>
+        <translation>Visite nossa página para atualizações:</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="107"/>
+        <source>The following people have contributed with translations:</source>
+        <translation>As seguintes pessoas contribuiram com traduções:</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="109"/>
+        <source>Spanish</source>
+        <translation>Espanhol</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="110"/>
+        <source>Russian</source>
+        <translation>Russo</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="111"/>
+        <source>Lithuanian</source>
+        <translation>Lituano</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="112"/>
+        <source>Japanese</source>
+        <translation>Japonês</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="113"/>
+        <source>Simplified-Chinese</source>
+        <translation>Chinês simplificado</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="114"/>
+        <source>Basque</source>
+        <translation>Basco</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="115"/>
+        <source>Portuguese</source>
+        <translation>Português</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="116"/>
+        <source>Hungarian</source>
+        <translation>Húngaro</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="117"/>
+        <source>Polish</source>
+        <translation>Polonês</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="119"/>
+        <source>Greek</source>
+        <translation>Grego</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="120"/>
+        <source>Hebrew</source>
+        <translation>Hebraico</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="144"/>
+        <source>&lt;b&gt;%1&lt;/b&gt; (%2)</source>
+        <translation>&lt;b&gt;%1&lt;/b&gt; (%2)</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="118"/>
+        <source>Galician</source>
+        <translation>Galego</translation>
+    </message>
+    <message>
+        <location filename="../about.ui" line="201"/>
+        <source>&amp;Youtube</source>
+        <translation>&amp;Youtube</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="63"/>
+        <source>Founded in February 2005, YouTube&amp;trade; is the world&apos;s most popular online video community, allowing millions of people to discover, watch and share originally-created videos. YouTube&amp;trade; provides a forum for people to connect, inform, and inspire others across the globe and acts as a distribution platform for original content creators and advertisers large and small.</source>
+        <translation>Fundado em fevereiro de 2005, o YouTube ™ é a mais popular comunidade mundial de vídeo online, permitindo que milhões de pessoas descubram, assistam e compartilhem vídeos criados com originalidade. A YouTube ™ fornece um fórum para que as pessoas se conectem, informem e inspirem outras pessoas em todo o mundo. Também funciona como uma plataforma de distribuição de conteúdo original e com anunciantes grandes e pequenos.</translation>
+    </message>
+    <message>
+        <location filename="../about.cpp" line="69"/>
+        <source>By using this application you hereby agree to be bound by Google Terms of Services located at %1.</source>
+        <translation>Usando esse programa você concorda em se comprometer com os Termos de Serviço do Google localizados em %1.</translation>
+    </message>
+</context>
+<context>
+    <name>ConfigDialog</name>
+    <message>
+        <location filename="../configdialog.ui" line="14"/>
+        <source>Settings</source>
+        <translation>Configurações</translation>
+    </message>
+    <message>
+        <location filename="../configdialog.ui" line="20"/>
+        <source>Recording</source>
+        <translation>Gravando</translation>
+    </message>
+    <message>
+        <location filename="../configdialog.ui" line="28"/>
+        <source>&amp;Save to this folder</source>
+        <translation>&amp;Salvar nessa pasta</translation>
+    </message>
+    <message>
+        <location filename="../configdialog.ui" line="45"/>
+        <source>&amp;Quality</source>
+        <translation>&amp;Qualidade</translation>
+    </message>
+    <message>
+        <location filename="../configdialog.ui" line="59"/>
+        <location filename="../configdialog.cpp" line="117"/>
+        <source>Normal (360p)</source>
+        <translation>Normal (360p)</translation>
+    </message>
+    <message>
+        <location filename="../configdialog.ui" line="64"/>
+        <location filename="../configdialog.cpp" line="117"/>
+        <source>HD (720p)</source>
+        <translation>HD (720p)</translation>
+    </message>
+    <message>
+        <location filename="../configdialog.ui" line="69"/>
+        <location filename="../configdialog.cpp" line="117"/>
+        <source>Full HD (1080p)</source>
+        <translation>Full HD (1080p)</translation>
+    </message>
+    <message>
+        <location filename="../configdialog.ui" line="90"/>
+        <source>&amp;Format</source>
+        <translation>&amp;Formato</translation>
+    </message>
+    <message>
+        <location filename="../configdialog.ui" line="101"/>
+        <source>MP4</source>
+        <translation>MP4</translation>
+    </message>
+    <message>
+        <location filename="../configdialog.ui" line="106"/>
+        <source>Flv</source>
+        <translation>Flv</translation>
+    </message>
+    <message>
+        <location filename="../configdialog.ui" line="132"/>
+        <source>Playback</source>
+        <translation>Reprodução</translation>
+    </message>
+    <message>
+        <location filename="../configdialog.ui" line="140"/>
+        <source>&amp;Player:</source>
+        <translation>&amp;Tocador:</translation>
+    </message>
+    <message>
+        <location filename="../configdialog.cpp" line="131"/>
+        <source>Low Quality (226p)</source>
+        <translation>Baixa qualidade  (226p)</translation>
+    </message>
+    <message>
+        <location filename="../configdialog.cpp" line="131"/>
+        <source>Medium Quality (360p)</source>
+        <translation>Média qualidade (360)</translation>
+    </message>
+    <message>
+        <location filename="../configdialog.cpp" line="131"/>
+        <source>High Quality (480p)</source>
+        <translation>Alta qualidade (480)</translation>
+    </message>
+</context>
+<context>
+    <name>DownloadFile</name>
+    <message>
+        <location filename="../downloadfile.cpp" line="115"/>
+        <source>%1 hours</source>
+        <translation>%1 horas</translation>
+    </message>
+    <message>
+        <location filename="../downloadfile.cpp" line="121"/>
+        <source>%1 minutes</source>
+        <translation>%1 minutos</translation>
+    </message>
+    <message>
+        <location filename="../downloadfile.cpp" line="108"/>
+        <source>unknown time remaining</source>
+        <translation>tempo restante desconhecido</translation>
+    </message>
+    <message>
+        <location filename="../downloadfile.cpp" line="124"/>
+        <source>%1 seconds</source>
+        <translation>%1 segundos</translation>
+    </message>
+    <message>
+        <location filename="../downloadfile.cpp" line="125"/>
+        <source>%1 remaining</source>
+        <translation>%1 restando</translation>
+    </message>
+    <message>
+        <location filename="../downloadfile.cpp" line="130"/>
+        <source>%1 of %2 MB</source>
+        <translation>%1 de %2 MB</translation>
+    </message>
+    <message>
+        <location filename="../downloadfile.cpp" line="136"/>
+        <source>%1 of %2 KB</source>
+        <translation>%1 de %2 KB</translation>
+    </message>
+    <message>
+        <location filename="../downloadfile.cpp" line="142"/>
+        <source>%1 of %2 bytes</source>
+        <translation>%1 de %2 bytes</translation>
+    </message>
+    <message>
+        <location filename="../downloadfile.cpp" line="146"/>
+        <source>%1 of unknown size</source>
+        <translation>%1 de tamanho desconhecido</translation>
+    </message>
+    <message>
+        <location filename="../downloadfile.cpp" line="151"/>
+        <source>%1 MB/sec</source>
+        <translation>%1 MB/seg</translation>
+    </message>
+    <message>
+        <location filename="../downloadfile.cpp" line="155"/>
+        <source>%1 KB/sec</source>
+        <translation>%1 KB/seg</translation>
+    </message>
+    <message>
+        <location filename="../downloadfile.cpp" line="159"/>
+        <source>%1 bytes/sec</source>
+        <translation>%1 bytes/seg</translation>
+    </message>
+</context>
+<context>
+    <name>FileChooser</name>
+    <message>
+        <location filename="../filechooser.cpp" line="54"/>
+        <source>Click to select a file or folder</source>
+        <translation>Clique para selecionar um arquivo ou pasta</translation>
+    </message>
+</context>
+<context>
+    <name>RecordingDelegate</name>
+    <message>
+        <location filename="../recordingdialog.cpp" line="120"/>
+        <source>Canceled</source>
+        <translation>Cancelado</translation>
+    </message>
+    <message>
+        <location filename="../recordingdialog.cpp" line="120"/>
+        <source>Error</source>
+        <translation>Erro</translation>
+    </message>
+    <message>
+        <location filename="../recordingdialog.cpp" line="150"/>
+        <source>%1 MB</source>
+        <translation>%1 MB</translation>
+    </message>
+    <message>
+        <location filename="../recordingdialog.cpp" line="154"/>
+        <source>%1 KB</source>
+        <translation>%1 KB</translation>
+    </message>
+    <message>
+        <location filename="../recordingdialog.cpp" line="158"/>
+        <source>%1 bytes</source>
+        <translation>%1 bytes</translation>
+    </message>
+</context>
+<context>
+    <name>RecordingDialog</name>
+    <message>
+        <location filename="../recordingdialog.cpp" line="204"/>
+        <location filename="../recordingdialog.cpp" line="417"/>
+        <source>Recordings</source>
+        <translation>Gravações</translation>
+    </message>
+    <message>
+        <location filename="../recordingdialog.cpp" line="205"/>
+        <source>&amp;Clear list</source>
+        <translation>&amp;Limpar lista</translation>
+    </message>
+    <message>
+        <location filename="../recordingdialog.cpp" line="206"/>
+        <location filename="../recordingdialog.cpp" line="546"/>
+        <source>&amp;Open folder</source>
+        <translation>&amp;Abrir pasta</translation>
+    </message>
+    <message>
+        <location filename="../recordingdialog.cpp" line="287"/>
+        <location filename="../recordingdialog.cpp" line="682"/>
+        <source>There was an error in retrieving the download URL.</source>
+        <translation>Houve um erro na recuperação da URL de download.</translation>
+    </message>
+    <message>
+        <location filename="../recordingdialog.cpp" line="287"/>
+        <location filename="../recordingdialog.cpp" line="682"/>
+        <source>Recording failed</source>
+        <translation>Falha na gravação</translation>
+    </message>
+    <message>
+        <location filename="../recordingdialog.cpp" line="305"/>
+        <location filename="../recordingdialog.cpp" line="700"/>
+        <source>Starting</source>
+        <translation>Iniciando</translation>
+    </message>
+    <message>
+        <location filename="../recordingdialog.cpp" line="338"/>
+        <source>Error</source>
+        <translation>Erro</translation>
+    </message>
+    <message>
+        <location filename="../recordingdialog.cpp" line="342"/>
+        <source>Completed</source>
+        <translation>Completo</translation>
+    </message>
+    <message numerus="yes">
+        <location filename="../recordingdialog.cpp" line="421"/>
+        <source>%1% of %n video - Recordings</source>
+        <translation>
+            <numerusform>um: %1% de %n vídeos - Gravações</numerusform>
+            <numerusform>outro: %1% de %n vídeos - Gravações</numerusform>
+        </translation>
+    </message>
+    <message>
+        <location filename="../recordingdialog.cpp" line="506"/>
+        <source>&amp;Cancel</source>
+        <translation>&amp;Cancelar</translation>
+    </message>
+    <message>
+        <location filename="../recordingdialog.cpp" line="508"/>
+        <source>&amp;Remove from list</source>
+        <translation>&amp;Remover da lista</translation>
+    </message>
+    <message>
+        <location filename="../recordingdialog.cpp" line="527"/>
+        <location filename="../recordingdialog.cpp" line="549"/>
+        <source>Remove from &amp;list</source>
+        <translation>Remover da &amp;lista</translation>
+    </message>
+    <message>
+        <location filename="../recordingdialog.cpp" line="525"/>
+        <source>&amp;Retry</source>
+        <translation>Tentar de &amp;novo</translation>
+    </message>
+    <message>
+        <location filename="../recordingdialog.cpp" line="545"/>
+        <source>&amp;Play</source>
+        <translation>&amp;Tocar</translation>
+    </message>
+    <message>
+        <location filename="../recordingdialog.cpp" line="548"/>
+        <source>&amp;Delete</source>
+        <translation>&amp;Apagar</translation>
+    </message>
+    <message>
+        <location filename="../recordingdialog.cpp" line="627"/>
+        <source>Fetching URL...</source>
+        <translation>URL atraente...</translation>
+    </message>
+    <message>
+        <location filename="../recordingdialog.cpp" line="642"/>
+        <source>File error</source>
+        <translation>Erro no arquivo</translation>
+    </message>
+    <message>
+        <location filename="../recordingdialog.cpp" line="643"/>
+        <source>The file does not exists, would you like to remove it from the list?</source>
+        <translation>O arquivo não existe. Você gostaria de removê-lo da lista?</translation>
+    </message>
+</context>
+<context>
+    <name>YTDelegate</name>
+    <message>
+        <location filename="../ytdelegate.cpp" line="113"/>
+        <source>%L1 views</source>
+        <translation>%L1 visualizações</translation>
+    </message>
+</context>
+<context>
+    <name>YTDialog</name>
+    <message>
+        <location filename="../ytdialog.cpp" line="210"/>
+        <source>YouTube Browser - SMPlayer</source>
+        <translation>YouTube Browser - SMPlayer</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="258"/>
+        <source>Settings</source>
+        <translation>Configurações</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="264"/>
+        <source>Information</source>
+        <translation>Informação</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="270"/>
+        <source>Show recordings</source>
+        <translation>Mostrar gravações</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="435"/>
+        <source>Most Relevant</source>
+        <translation>Mais relevante</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="439"/>
+        <source>Most Recent</source>
+        <translation>Mais recente</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="443"/>
+        <source>Most Viewed</source>
+        <translation>Mais visto</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="447"/>
+        <source>Most Popular</source>
+        <translation>Mais popular</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="451"/>
+        <source>Recently Featured</source>
+        <translation>Recursos adicionados recentemente</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="455"/>
+        <source>Most Rated</source>
+        <translation>Mais votados</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="466"/>
+        <source>Most popular videos on YouTube%1</source>
+        <translation>Vídeos mais populares no Youtube %1</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="467"/>
+        <source>Most rated videos on YouTube%1</source>
+        <translation>Vídeos mais votados no Youtube %1</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="587"/>
+        <source>Error: Could not connect to Youtube server.</source>
+        <translation>Erro: Não foi possível se conectar ao servidor do Youtube.</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="471"/>
+        <source>YouTube%2 results for &quot;%1&quot;</source>
+        <translation>YouTube%2 resultados para &quot;%1&quot;</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="468"/>
+        <source>Videos recently featured on YouTube%1</source>
+        <translation>Vídeos adicionados recentemente no YouTube%1</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="595"/>
+        <source>No videos found</source>
+        <translation>Não foram encontrados vídeos</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="597"/>
+        <source>No videos found for &quot;%1&quot;</source>
+        <translation>Não foram encontrados vídeos para &quot;%1&quot;</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="675"/>
+        <source>&amp;Play video</source>
+        <translation>&amp;Tocar vídeo</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="676"/>
+        <source>&amp;Record video</source>
+        <translation>&amp;Gravar vídeo</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="677"/>
+        <source>&amp;Watch on YouTube</source>
+        <translation>&amp;Assistir no Youtube</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="678"/>
+        <source>&amp;Copy link</source>
+        <translation>&amp;Copiar link</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="233"/>
+        <source>Next</source>
+        <translation>Seguinte</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="239"/>
+        <source>Previous</source>
+        <translation>Anterior</translation>
+    </message>
+    <message>
+        <location filename="../ytdialog.cpp" line="762"/>
+        <source>Error</source>
+        <translation>Erro</translation>
+    </message>
+</context>
+</TS>
